user6.rules
*filter
:ufw6-user-input - [0:0]
:ufw6-user-output - [0:0]
:ufw6-user-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-user-logging-input - [0:0]
:ufw6-user-logging-output - [0:0]
:ufw6-user-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-logging-deny - [0:0]
:ufw6-logging-allow - [0:0]
### RULES ###

### tuple ### allow tcp 5901 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 5901 -j ACCEPT

### tuple ### allow udp 5901 ::/0 any ::/0 in
-A ufw6-user-input -p udp --dport 5901 -j ACCEPT

### tuple ### allow any 22 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 22 -j ACCEPT
-A ufw6-user-input -p udp --dport 22 -j ACCEPT

### tuple ### allow any 5060 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 5060 -j ACCEPT
-A ufw6-user-input -p udp --dport 5060 -j ACCEPT

### tuple ### allow any 80 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 80 -j ACCEPT
-A ufw6-user-input -p udp --dport 80 -j ACCEPT

### tuple ### allow any 80 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 80 -j ACCEPT
-A ufw6-user-output -p udp --dport 80 -j ACCEPT

### tuple ### allow tcp 1723 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 1723 -j ACCEPT

### tuple ### allow tcp 6070 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 6070 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw6-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw6-logging-deny -m state --state INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###
COMMIT
